# Football-Vision

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  sample.json  versiones.txt
app/: config.py  main.py  schemas.py
app/routers/: batch.py  health.py
app/services/: classifier.py  detector.py  homography.py  tracker.py
app/static/: app.js  index.html  style.css
batch_processor/: celery_app.py  worker.py
docker/: .dockerignore  Dockerfile  docker-compose.gpu.yml  docker-compose.yml
docs/: ARCHITECTURE.md  KaliCalibGithub.url  Keypoints.url
notebooks/: Codigo_Pelota.ipynb  KeypointsCoco.ipynb  Player_identification.ipynb
tests/: conftest.py  test_api.py  test_detector.py  test_homography.py  test_tracker.py
train2/: args.yaml  events.out.tfevents.1718388528.PCDeFer.26584.0  results.csv
train4/: args.yaml  events.out.tfevents.1718395825.PCDeFer.26584.1  results.csv
training/: compute_keypoints.py  convert_pose_to_detection.py  download_datasets.py  field_template.py  map_keypoints.py  pipeline.py  train_detection.py  train_keypoints.py  train_medium.py
training/configs/: detection.yaml  keypoints.yaml
videos/DFL Bundesliga Data Shootout/test/: test.csv
videos/DFL Bundesliga Data Shootout/train/: train.csv
yolo/: data.yaml
yolo/valid/: labels.cache
yolo/yolov8n/: args.yaml  events.out.tfevents.1719439401.PCDeFer.62392.0  results.csv
yolo/yolov8n2/: args.yaml  results.csv
