[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "football-vision"
version = "1.0.0"
description = "Real-time and batch football video analytics API using YOLOv8"
authors = [
    {name = "Football-Vision Team"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "torch>=2.0.0",
    "ultralytics>=8.2.0",
    "torchvision>=0.18.0",
    "numpy>=1.25.0",
    "opencv-python>=4.9.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "supervision>=0.20.0",
    "Pillow>=10.0.0",
    "deepsort>=0.0.5",
    "filterpy>=1.4.5",
    "tqdm>=4.66.0",
    "roboflow>=1.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
